default/objects/Approval_Process_Users__c/Approval_Process_Users__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Approval Process Users</label>
</CustomObject>