default/objects/Approval_Process_Users__c/fields/CHF__c.field-meta.xml
<CustomField>
    <fullName>CHF__c</fullName>
    <label>CHF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>