default/objects/Approval_Process_Users__c/fields/CZK__c.field-meta.xml
<CustomField>
    <fullName>CZK__c</fullName>
    <label>CZK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>