default/objects/Approval_Process_Users__c/fields/EUR__c.field-meta.xml
<CustomField>
    <fullName>EUR__c</fullName>
    <label>EUR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>