default/objects/Approval_Process_Users__c/fields/HUF__c.field-meta.xml
<CustomField>
    <fullName>HUF__c</fullName>
    <label>HUF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>