default/objects/Approval_Process_Users__c/fields/PLN__c.field-meta.xml
<CustomField>
    <fullName>PLN__c</fullName>
    <label>PLN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>