default/objects/Approval_Process_Users__c/fields/Unlimited__c.field-meta.xml
<CustomField>
    <fullName>Unlimited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unlimited</label>
    <type>Checkbox</type>
</CustomField>